samples/_failures_safe/1761626945_a4a49e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eeb8ffd5.c: In function ‘main’:
./samples/SAFE/__tmp_eeb8ffd5.c:143:25: error: missing terminating " character
  143 |         fprintf(stderr, "Failed
      |                         ^~~~~~~
./samples/SAFE/__tmp_eeb8ffd5.c:143:9: error: expected expression at end of input
  143 |         fprintf(stderr, "Failed
      |         ^~~~~~~
./samples/SAFE/__tmp_eeb8ffd5.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eeb8ffd5.c:143:9: error: expected declaration or statement at end of input
